--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -3,11 +3,11 @@
 
 <div class="text-end">   
 
-  <%= button_to send_reminder_path(meeting: @meeting), 
+  <%#= button_to send_reminder_path(meeting: @meeting), 
         method: :post, class: 'btn btn-sm m-1 btn-primary fw-bold' do %>
-    <i class="bi bi-envelope-at"></i>
-    <span>Envoyer mail</span>
-  <% end %>
+    <!--i class="bi bi-envelope-at"></i>
+    <span>Envoyer mail</span-->
+  <%# end %>
 
   <%#= button_to 'Send Reminder (Job)', send_reminder_job_path(meeting: @meeting), method: :post, class: 'btn btn-warning' %>
 
