--- a/app/views/produits/_stock.html.erb
+++ b/app/views/produits/_stock.html.erb
@@ -6,7 +6,13 @@
     </div>
 
     <div class="card-body">         
-        <p> Stock initial : <span class="fw-bold"> <%= total_produits(extract_ids(@produit)) %> </span> </p> 
+        <p> 
+            Stock initial : <span class="fw-bold"> <%= total_produits(extract_ids(@produit)) %> </span> 
+            <% if Produit.is_ensemble.exists?(id: @produit.id) %>
+                Stock illimité pour ensemble
+            <% end %>
+
+         </p> 
         <p> Total loués : <span class="fw-bold"> <%= total_loues(extract_ids(@produit)) %> </span> </p> 
         <p> Total vendus : <span class="fw-bold"> <%= total_vendus(extract_ids(@produit)) %> </span> </p> 
         <p> Loc terminées : <span class="fw-bold"> <%= locations_terminees_a_date(extract_ids(@produit)) %> </span> </p> 
