--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -48,7 +48,7 @@
         <div class="input-group mb-1">
           <%= form.label :commande_id, class: "input-group-text" %>
           <%= form.select :commande_id, 
-                options_for_select(Commande.select(:id).order(:id).map { |c| [c.ref_commande, c.id] }, @meeting.commande_id),
+                options_for_select(Commande.select(:id).order(:id).map { |c| [c.ref_commande, c.id] }, meeting.commande_id),
                 { include_blank: 'Select' },  
                 { class: "form-select" } %>
 
