--- a/app/views/etiquettes/_produit.html.erb
+++ b/app/views/etiquettes/_produit.html.erb
@@ -1,12 +1,7 @@
 <!-- Section Image -->
-<div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; background-color: #f8f9fa;">
-
-    <% if produit.image1.present? %>
-        <%= image_tag produit.image1, class: "img-thumbnail rounded", style: "max-height: 100%; max-width: 100%; object-fit: contain;" %>
-    <% else %>
-        <%= image_tag wicked_pdf_asset_path('/images/no_photo.png'), class: "img-fluid", style: "max-height: 100%; max-width: 100%; object-fit: contain;" %>
-    <% end %>
-
+<div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; position: relative; overflow: hidden;">
+  <div style="width: 100%; height: 100%; background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); background-size: contain; background-repeat: no-repeat; background-position: center;">
+  </div>
 </div>
 
 <!-- Footer Section (Sizes and Colors) -->
