logs on send reminder

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -9,7 +9,7 @@
     <span>Envoyer mail</span-->
   <%# end %>
 
-  <%#= button_to 'Send Reminder (Job)', send_reminder_job_path(meeting: @meeting), method: :post, class: 'btn btn-warning' %>
+  <%= button_to 'Send Reminder (Job)', send_reminder_job_path(meeting: @meeting), method: :post, class: 'btn btn-warning' %>
 
 </div>
 
