--- a/app/views/meetings/_meeting.html.erb
+++ b/app/views/meetings/_meeting.html.erb
@@ -3,7 +3,7 @@
 
   <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
-    <div class="row">
+    <div class="row text-start">
       <div class="col-10">
         <%= custom_badge("", "", "", "",  meeting.nom) %>
         <%= custom_badge("fa-calendar", "", "", "",  meeting.full_date) %>
