--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -3,7 +3,7 @@
 
 <%= bloc_nouveau(Meeting) %>
 
-<div class="container m-3 text-center">
+<div class="container my-3 text-center">
   <%= link_to 'Jour', { type: 'day'}, class: 'btn btn-outline-primary' %>
   <%= link_to 'Semaine', { type: 'week'}, class: 'btn btn-outline-primary' %>
   <%= link_to 'Mois', { type: 'month' }, class: 'btn btn-outline-primary' %>
@@ -12,15 +12,15 @@
 <div class="text-center my-4 m-2"> 
 
   <% if @calendar_type == "day" %>
-    <%= calendar(number_of_days: 1, events: @meetings_periode) do |date, meetings| %>
+    <%= calendar(number_of_days: 1, events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
       <%= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
     <% end %>
   <% elsif @calendar_type == "week" %>
-    <%= week_calendar(events: @meetings_periode) do |date, meetings| %>
+    <%= week_calendar(events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
       <%= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
     <% end %>
   <% elsif @calendar_type == "month" %>
-    <%= month_calendar(events: @meetings_periode) do |date, meetings| %>
+    <%= month_calendar(events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
       <%= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
     <% end %>
   <% end %>
