test calendar subscribe

--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -43,10 +43,9 @@
   <div class="container text-end">
     <%= link_to "S'abonner au calendrier", meetings_url(protocol: :webcal, format: :ics), 
           class:"btn btn-sm btn-dark fw-bold" %>  
-
-          <%= link_to "Download Calendar (ICS)", download_ics_meetings_path, class: "btn btn-primary" %>
-
   </div>
+ 
+  <%#= link_to "Download Calendar (ICS)", download_ics_meetings_path, class: "btn btn-primary" %>
 
 </div>
 
