--- a/app/views/meetings/_calendar.html.erb
+++ b/app/views/meetings/_calendar.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <% meetings.each do |meeting| %>
-  <div class="d-flex text-wrap badge text-decoration-none bg-primary mb-1 small p-1" style="max-width: 100%; font-size: 10px;">
+  <div class="d-flex text-wrap badge text-decoration-none bg-primary mb-1 small p-1" style="width: 110px; font-size: 8px;">
     <div class="flex-grow-1">
       <%= link_to meeting.full_name, meeting, class: "text-decoration-none text-light" %>
         <div class="fw-normal mt-1">
