fix calendar copiy link

--- a/app/views/meetings/_copy_url_button.html.erb
+++ b/app/views/meetings/_copy_url_button.html.erb
@@ -21,7 +21,7 @@
           // Copy to clipboard
           navigator.clipboard.writeText(url).then(function() {
             copyButton.textContent = "Copié!";  // Update button label to "Copied"
-            alert("Webcal url copié!");
+          //  alert("Webcal url copié!");
 
             // Optional: Revert the label back to "Invite" after a few seconds
             setTimeout(function() {
