--- a/app/views/categorie_produits/index.html.erb
+++ b/app/views/categorie_produits/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Catégories produits", "layers", @categorie_produits.count, 
+<%= bandeau_entete("Catégories produits", "layers", @count_categorie_produits, 
 :nom_cont, categorie_produits_path) %>
 
 <%= bloc_nouveau(CategorieProduit) %>
