--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Clients", "person", @clients.count, 
+<%= bandeau_entete("Clients", "person", @count_clients, 
         :nom_or_prenom_cont, clients_path) %>
 
 <%= bloc_nouveau(Client) %>
