--- a/app/views/type_produits/index.html.erb
+++ b/app/views/type_produits/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Types produits", "list-ul", @type_produits.count, 
+<%= bandeau_entete("Types produits", "list-ul", @count_type_produits, 
 :nom_cont, type_produits_path) %>
 
 <%= bloc_nouveau(TypeProduit) %>
