--- a/app/views/produits/index.html.erb
+++ b/app/views/produits/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Produits", "person-standing-dress", @produits.count, 
+<%= bandeau_entete("Produits", "person-standing-dress", @count_produits, 
       :nom_or_reffrs_or_handle_or_categorie_produit_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont,
       produits_path) %>
 
