full div for images etiquettes

--- a/app/views/etiquettes/_produit.html.erb
+++ b/app/views/etiquettes/_produit.html.erb
@@ -1,6 +1,6 @@
 <!-- Section Image -->
 <div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; position: relative; overflow: hidden;">
-  <div style="width: 100%; height: 100%; background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); background-size: contain; background-repeat: no-repeat; background-position: center;">
+  <div style="width: 100%; height: 100%; background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); background-size: cover; background-repeat: no-repeat; background-position: center;">
   </div>
 </div>
 
