rework stock helper to check for date

--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete_simple("Nouveau client", "user") %>
+<%= bandeau_entete_simple("Nouveau client", "person") %>
 
 <%= render "form", client: @client %>
 
