--- a/app/views/commandes/new.html.erb
+++ b/app/views/commandes/new.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete_simple("Nouvelle commande", "file-invoice") %>
+<%= bandeau_entete_simple("Nouvelle commande", "file-earmark-fill") %>
 
 <%= render "form", commande: @commande %>
 
