--- a/app/views/sousarticles/_form.html.erb
+++ b/app/views/sousarticles/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
+<div class="">
 
   <%= form_with(model: sousarticle) do |form| %>
     <% if sousarticle.errors.any? %>
