--- a/app/views/sousarticles/_sousarticle.html.erb
+++ b/app/views/sousarticles/_sousarticle.html.erb
@@ -1,36 +1,40 @@
-<div id="<%= dom_id sousarticle %>" class="card mb-2 p-2">
-    <%#= sousarticle.article_id %>
-    <%#= sousarticle.produit_id %>
+<div id="<%= dom_id sousarticle %>" class="mb-2">
 
     <div class="row d-flex align-items-center">
-
-      <div class="col-2 text-center">
-        <%= image_tag(sousarticle.produit.default_image, width: 50) %>  
+      <div class="col-sm-2 text-center">
+        <%= image_tag(sousarticle.produit.default_image, class: "img-fluid rounded") %>  
       </div>
 
-      <div class="col">
+      <div class="col-sm-10">
+        <div class="d-flex justify-content-between align-items-center">
+          <!-- Left Section: Fields with Labels -->
+          <div>
+            <h6 class="fw-bold"><%= sousarticle.produit.nom %></h6>
+            <%= field_with_label("Couleur", sousarticle.produit&.couleur&.nom) %>
+            <%= field_with_label("Taille", sousarticle.produit&.taille&.nom) if sousarticle.produit.taille.present? %>
+            <%= field_with_label("Nature", sousarticle.nature) if sousarticle.nature.present? %>
+            <%= field_with_label("Description", sousarticle.description) if sousarticle.description.present? %>
+            <%= field_with_label("Prix", sousarticle.prix) if sousarticle.prix.present? %>
+            <%= field_with_label("Caution", sousarticle.caution) if sousarticle.caution.present? %>
+            <%= field_with_label("Commentaires", sousarticle.commentaires) if sousarticle.commentaires.present? %>
+          </div>
 
-        <h6 class="fw-bold"> <%= sousarticle.produit.nom %>  </h6>
+          <!-- Right Section: Buttons -->
+          <div class="d-flex gap-2">
+            <%= link_to "", "#collapseSousarticle#{dom_id(sousarticle)}", 
+              class: "btn btn-sm btn-primary bi bi-eye", 
+              "data-bs-toggle": "collapse", role: "button", 
+              "aria-expanded": "false", "aria-controls": "collapseSousarticle#{dom_id(sousarticle)}" %>
 
-        <%= sousarticle.produit&.couleur&.nom %> 
-        <%= "taille:  #{sousarticle.produit&.taille&.nom}" if sousarticle.produit.taille.present?  %> 
-
-        <%= "nature:  #{sousarticle.nature}" if sousarticle.nature.present? %> 
-        <%= "description:  #{sousarticle.description}" if sousarticle.description.present? %> 
-        <%= "prix:  #{sousarticle.prix}" if sousarticle.prix.present? %> 
-        <%= "caution:  #{sousarticle.caution}" if sousarticle.caution.present? %> 
-        <%= "commentaires:  #{sousarticle.commentaires}" if sousarticle.commentaires.present? %> 
-
+            <%= button_to "", edit_sousarticle_path(sousarticle), method: :post, 
+              class: "btn btn-sm btn-secondary bi bi-pencil-square" %>
+            
+            <%= button_to "", sousarticle, method: :delete, 
+              data: { confirm: 'Confirmer suppression ?' }, 
+              class: "btn btn-sm btn-danger bi bi-trash" %>
+          </div>
+        </div>
       </div>
-
-      <div class="col text-end">
-        <%= link_to "", "#collapseSousarticle#{dom_id(sousarticle)}", 
-              class: "btn btn-sm btn-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
-              role: "button", "aria-expanded": "false", "aria-controls": "collapseSousarticle#{dom_id(sousarticle)}" %>
-        <%= button_to "", edit_sousarticle_path(sousarticle), method: :post, class: "btn btn-sm btn-secondary bi bi-pencil-square m-1" %>
-        <%= button_to "", sousarticle, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger bi bi-trash m-1" %>
-      </div>
-
     </div>
 
 </div>
