fixing selection and etiquettes produit partial

--- a/app/views/etiquettes/edition.html.erb
+++ b/app/views/etiquettes/edition.html.erb
@@ -6,7 +6,7 @@
           <% if produit.present? %>
 
             <td style="width: 450px; height: 632px; border: 1px solid #ccc; padding: 10px; box-sizing: border-box;">
-              <%= render 'etiquettes/produit', produit: produit %>
+              <%= render 'etiquettes/produit_document', produit: produit %>
             </td>
           
           <% end %>
