--- a/app/views/etiquettes/_produit.html.erb
+++ b/app/views/etiquettes/_produit.html.erb
@@ -1,61 +1,57 @@
-<!-- Section Image -->
-<div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; position: relative; overflow: hidden;">
-  <div style="width: 100%; height: 100%; background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<div id="<%= dom_id produit %>" class="my-2">
+
+  <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
+    <div class="row g-0">
+      <!-- Image Column -->
+      <div class="col-sm-4 p-1 text-center">
+        <div data-turbo="false">
+          <%= link_to image_tag(produit.default_image, class: "img-fluid img-produit"), produit_path(produit)  %>
+        </div>
+      </div>
+      <!-- Text Column -->
+      <div class="col-sm-8">
+        <div class="card-body p-1">
+          <h5 class="card-title">
+            <%= produit.nom %>
+          </h5>
+          
+          <p class="card-text">
+            <p>
+              <%= produit.categorie_produit.nom if produit.categorie_produit %>
+            </p>
+
+            <%= produit.description %>
+
+                <div class="container text-end">
+
+                  <% if session[:selection_etiquettes].count < 4 %>
+                    
+                    <%= form_with url: update_selection_etiquettes_path, method: :post, local: true, data: { turbo: false } do |form| %>
+                      <%= form.hidden_field :new_product, value: produit.id %>
+                        <button type="submit" class="btn btn-warning my-4">
+                          <span class="fw-bold ms-2"> Sélection étiquette</span>
+                          <i class="bi-tags"></i> 
+                        </button>
+                    <% end %>
+                  
+                  <% else %>
+
+                    <%= link_to etiquettes_path, class: "btn btn-secondary my-4" do %>
+                      <span class="fw-bold ms-2"> Limite atteinte</span>
+                      <i class="bi fa-tags"></i> 
+                    <% end %>
+                    
+                  
+                  <% end %>
+                  
+                  
+                </div>           
+            </div>
+          </p>
+        </div>
+
+      </div>
+    </div>
+
   </div>
-</div>
-
-<!-- Footer Section (Sizes and Colors) -->
-<div style="height: 120px; padding: 5px;">
-    <table style="width: 100%;">
-        <tr>
-            <td style="width: 160px;">
-                <%= image_tag(produit.qr_code, class:"img-fluid") if produit.qr_code.present? %>              
-            </td>
-
-            <td style="width: 300px; padding: 5px;">
-                <h3 class="bolded text-dark"><%= produit.nom %></h3> 
-
-                <!-- Pricing Section -->
-                <div>
-                    <% if produit.prixvente %>
-                        <span>Vente: <%= number_to_currency(produit.prixvente, locale: :fr, precision: 0) %></span>                      
-                    <% end %>
-                    <% if produit.prixlocation %>
-                        <span>Location: <%= number_to_currency(produit.prixlocation, locale: :fr, precision: 0) %></span> 
-                    <% end %>
-                </div>
-
-            </td>
-        </tr>
-    </table>
-</div>
-
-<div style="height: 80px; padding: 5px; margin-top: 20px">
-
-    <div>Taille(s): 
-        <% if produit.taille.present? %>
-            <span style="border: 2px solid black; border-radius: 5px; margin-right: 2px; padding: 1px;">
-                <%= produit.taille&.nom %>
-            </span>
-            <% same_produit_same_couleur_others_tailles(produit).each do |prod| %>
-                <span style="border: 2px solid grey; border-radius: 5px; color: grey; margin-right: 2px; padding: 1px;">
-                    <%= prod.taille&.nom %>
-                </span>
-            <% end %>
-        <% end %>
-    </div>
-    <div class="mt-2">Couleur(s): 
-        <% if produit.couleur.present? %>
-            <span style="border: 2px solid black; border-radius: 5px; margin-right: 2px; padding: 1px;">
-                <%= produit.couleur&.nom %>
-                <div style="display: inline-block; width: 10px; height: 10px; border-radius: 50%; background-color: <%= produit.couleur.couleur_code %>"></div>
-            </span>
-            <% same_produit_same_taille_others_couleurs(produit).each do |prod| %>
-                <span style="border: 2px solid grey; border-radius: 5px; color: grey; margin-right: 2px; padding: 1px;">
-                    <%= prod.couleur&.nom %>
-                    <div style="display: inline-block; width: 10px; height: 10px; border-radius: 50%; background-color: <%= prod.couleur.couleur_code %>"></div>
-                </span>
-            <% end %>
-        <% end %>
-    </div>
 </div>
