--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -5,7 +5,7 @@
       <!-- Image Column -->
       <div class="col-sm-4 p-1 text-center">
         <div data-turbo="false">
-          <%= link_to image_tag(produit.default_image, class: "img-fluid img-produit"), produit_path(produit)  %>
+          <%= link_to image_tag(produit.default_image, class: "img-fluid img-produit"), admin_produit_path(produit)  %>
         </div>
       </div>
       <!-- Text Column -->
