--- a/app/views/admin/meetings/_form.html.erb
+++ b/app/views/admin/meetings/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-  <%= form_with(model: meeting) do |form| %>
+  <%= form_with(model: [:admin, meeting]) do |form| %>
     <% if meeting.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
