--- a/app/views/admin/meetings/index.html.erb
+++ b/app/views/admin/meetings/index.html.erb
@@ -1,5 +1,5 @@
 <%= bandeau_entete("Rendez-vous", "calendar", @count_meetings, 
-:nom_or_datedebut_or_datefin_or_lieu_cont, meetings_path) %>
+:nom_or_datedebut_or_datefin_or_lieu_cont, admin_meetings_path) %>
 
 <%= bloc_nouveau(Meeting) %>
 
