--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,14 @@
 
     <%= favicon_link_tag asset_path('favicon.webp'), :rel => 'icon', :type =>  'image/png' %>
 
-    <%= render "shared/gtag" %>
+    <%= render "admin/shared/gtag" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= render "shared/navbar_admin" %>
+    <%= render "admin/shared/navbar_admin" %>
 
     <div class="d-flex justify-content-center align-items-center mb-3">
       <div class="page-max-widthed">
