--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -3,11 +3,11 @@
 
 <%= bloc_nouveau(Meeting) %>
 
-<div class="container my-3 text-center">
+<!--div class="container my-3 text-center">
   <%#= link_to 'Jour', { type: 'day' }, class: active_date_range_class('day') %>
   <%#= link_to 'Semaine', { type: 'week' }, class: active_date_range_class('week') %>
   <%#= link_to 'Mois', { type: 'month' }, class: active_date_range_class('month') %>
-</div>
+</div-->
 
 <div class="d-flex justify-content-center text-center my-4 m-2 overflow-auto" style="max-width: 100%; white-space: nowrap;">
 
@@ -25,9 +25,10 @@
     <%# end %>
   <%# end %>
 
+  <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FParis&title=A1soir&showTitle=0&showPrint=0&showCalendars=0&mode=WEEK&src=YTFzb2lyLmFwcEBnbWFpbC5jb20&src=ZnIuZnJlbmNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%230B8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
 </div>
 
-<iframe src="https://calendar.google.com/calendar/embed?src=a1soir.app%40gmail.com&ctz=Europe%2FParis" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 <div>
   <hr>
